[gd_scene load_steps=12 format=2]

[ext_resource path="res://Title.gd" type="Script" id=1]
[ext_resource path="res://NotoSansJP-Black.otf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.498039, 0.498039, 0.498039, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.498039, 0.498039, 0.498039, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 2 )

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="SenteButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -24.0
margin_right = 128.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.74902, 0.74902, 0.74902, 1 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.74902, 1 )
custom_colors/font_color_hover = Color( 0.74902, 0.74902, 0.74902, 1 )
custom_colors/font_color_pressed = Color( 0.74902, 0.74902, 0.74902, 1 )
text = "先手でぶっ潰す"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoteButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -24.0
margin_right = 128.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.247059, 0.247059, 0.247059, 1 )
custom_colors/font_color = Color( 0.247059, 0.247059, 0.247059, 1 )
custom_colors/font_color_hover = Color( 0.247059, 0.247059, 0.247059, 1 )
custom_colors/font_color_pressed = Color( 0.247059, 0.247059, 0.247059, 1 )
text = "後手で締める"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SenteButton" to="." method="_on_SenteButton_pressed"]
[connection signal="pressed" from="GoteButton" to="." method="_on_GoteButton_pressed"]
